feat: User will get notification of quotation status